Further testing complete for Governance - specifically linking Governance to Duty.